@@ -7,7 +7,11 @@ env:
 install:
     - docker build -t bailador/bailador .
 script:
-    - docker run bailador/bailador prove6 -l
+    - docker run -d -e 'AUTHOR_TESTING=1' --volume=$(pwd):/srv --name bailador-test bailador/bailador /bin/sleep infinity
+    - docker exec -it bailador-test zef --verbose install .
+    - docker exec -it bailador-test prove6 -v xt
+    - docker stop bailador-test
+    - docker rm bailador-test
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
           docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
