@@ -1,0 +1,17 @@
+% my ($h) = @_;
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Bailador App</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  </head>
+  <body>
+    <h1>Bailador App</h1>
+    <div>
+      Version <%= $h<version> %>
+    </div>
+  </body>
+</html>
