@@ -1,3 +1,4 @@
+    - Ticket #201 - moved skeleton files into %?RESOURCES and added xt to be "integration tests" that run after installation
     - Ticket #224 - installation of Bailador as a dependency does not longer fail
 
 0.0.9 2017.07.28
